the conflict - shaindy

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>another new line</h2>
     <a>shaindy change</a>
     <h3>shira change</h3>
+    <a>the conflict - shaindy</a>
 </body>
 </html>
